classDiagram
  class DataSourceStatus {
    +ACTIVE: 
    +INACTIVE: 
    +ERROR: 
    +PENDING: 
    +SYNCING: 
    +MAINTENANCE: 
  }
  class DataSourceType {
    +MYSQL: 
    +POSTGRESQL: 
    +MONGODB: 
    +SNOWFLAKE: 
    +S3: 
    +REDIS: 
  }
  class DataSourceLocation {
    +ON_PREM: 
    +CLOUD: 
    +HYBRID: 
  }
  class ClassificationSource {
    +MANUAL: 
    +AUTOMATED: 
    +ML_SUGGESTED: 
    +PATTERN_BASED: 
    +INHERITED: 
    +THIRD_PARTY: 
  }
  DataSourceStatus ..> DataSourceType
  DataSourceStatus ..> DataSourceLocation
  DataSourceStatus ..> ClassificationSource
  classDef domain fill:#F8FAFF,stroke:#111827,color:#111827
  class ClassificationSource,DataSourceLocation,DataSourceStatus,DataSourceType domain
